--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -48,6 +48,7 @@
               "outputHashing": "all"
             },
             "development": {
+              "ssr": false,
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
