--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@primeng/themes": "^19.0.5",
+    "browserslist-config-baseline": "^0.1.3",
     "ngx-markdown": "^19.0.0",
     "ngx-scrollbar": "^17.0.0",
     "primeng": "^19.0.5",
@@ -32,6 +33,8 @@
     "@angular/cli": "^19.1.1",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "browserslist": "^4.24.4",
+    "caniuse-lite": "^1.0.30001706",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -39,5 +42,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.7.2"
-  }
+  },
+  "browserslist": [
+    "extends browserslist-config-baseline"
+  ]
 }
