--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@angular/material": "^19.2.7",
+        "add": "^2.0.6",
+        "ng": "^0.0.0"
     }
 }
