--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@angular/material": "^19.2.7",
         "add": "^2.0.6",
+        "alpinejs": "^3.14.9",
         "ng": "^0.0.0"
     }
 }
